# cvcommons

./: .gitignore  CMakeLists.txt  README.md  gui_utils.h  misc_utils.h  player_sample.cpp
include/: cvcommons.h
src/: cvcommons.cpp  player_sample.cpp
